--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul>
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Habitaciones</a></li>
-        <li><a href="#">Restaurante</a></li>
+        <li><a href="menu.html">Restaurante</a></li>
         <li><a href="#">Gimnasio</a></li>
         <li><a href="#">Eventos</a></li>
         <li><a href="#"><button class="login-button">Ingresar</button></a></li>
